[gd_scene load_steps=2 format=3 uid="uid://cfomuugvsi3jo"]

[ext_resource type="Script" path="res://dimension_card/dimension_card.gd" id="1_j3ibw"]

[node name="DimensionCard" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_j3ibw")

[node name="FrontButton" type="Button" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 25.0

[node name="FrontInfo" type="RichTextLabel" parent="FrontButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "front"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 25.0

[node name="BackInfo" type="RichTextLabel" parent="BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "back"

[connection signal="pressed" from="FrontButton" to="." method="_on_info_card_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_info_card_pressed"]
